# Vera

./: .gitignore  AGENT-USAGE.md  Cargo.toml  README.md  SKILL.md  deny.toml
.factory/: init.sh  services.yaml
.factory/skills/implementation-worker/: SKILL.md
.factory/validation/core-engine/scrutiny/: synthesis.json
.factory/validation/core-engine/scrutiny/reviews/: bm25-search.json  chunk-metadata.json  embedding-pipeline.json  hybrid-retrieval.json  index-command.json  index-performance.json  project-scaffold.json  reranking-pipeline.json  retrieval-benchmarks.json  search-quality.json  storage-layer.json  tree-sitter-parsing.json  vector-search.json
.factory/validation/docs-restructure/user-testing/: synthesis.json
.factory/validation/docs-restructure/user-testing/flows/: docs-cli.json
.factory/validation/extended-languages/scrutiny/: synthesis.json  synthesis.round1.json
.factory/validation/extended-languages/scrutiny/reviews/: languages-config-infra.json  languages-new-popular.json  languages-promoted-tier0.json  languages-scrutiny-fixes.json
.factory/validation/language-expansion/scrutiny/: synthesis.json  synthesis.round1.json
.factory/validation/language-expansion/scrutiny/reviews/: lang-symbol-extraction-fixes.json  lang-tier1b-structural.json  lang-tier2a-batch1.json  lang-tier2a-batch2.json  lang-tier2b-and-finalize.json
.factory/validation/local-inference/scrutiny/: synthesis.json  synthesis.round1.json
.factory/validation/local-inference/scrutiny/reviews/: local-fmt-fix.json  (+1 more)
.factory/validation/local-inference/user-testing/: synthesis.json
.github/workflows/: ci.yml  docker.yml  release.yml
benchmarks/: indexing-performance.md
benchmarks/reports/: final-benchmark-suite.md  reproduction-guide.md  vera-retrieval-benchmarks.md
benchmarks/results/final-suite/: combined_results.json  vera_bm25_only_results.json  vera_hybrid_norerank_results.json  vera_hybrid_results.json
benchmarks/results/local-binaries/: c7bdc09-jina-cuda-onnx-fp16-embed.json  c7bdc09-jina-cuda-onnx-quantized-embed.json  candidate-pool-fix-rerank50-jina-cuda-onnx-fp16-embed.json  dynamic-scaler-jina-cuda-onnx-quantized-embed.json  oom-fix-jina-cuda-onnx-quantized-embed.json
benchmarks/results/semble/: 2026-04-29-semble-subset.json  2026-05-01-vera-bm25-subset.json  2026-05-01-vera-cuda-subset.json  2026-05-01-vera-potion-subset.json  2026-05-02-vera-bm25-full.json  2026-05-02-vera-bm25-subset.json
benchmarks/results/vera-retrieval/: combined_results.json  vera_bm25_only_results.json  vera_hybrid_norerank_results.json  vera_hybrid_results.json
benchmarks/scripts/: run_final_benchmarks.py  run_vera_benchmarks.py
crates/vera-cli/: Cargo.toml
crates/vera-cli/src/: helpers.rs  main.rs  update_check.rs
crates/vera-cli/src/commands/: agent.rs  ast_query.rs  config.rs  doctor.rs  explain_path.rs  grep.rs  index.rs  mcp.rs  mod.rs  overview.rs  references.rs  repair.rs  search.rs  setup.rs  stats.rs  structural.rs  update.rs  watch.rs
crates/vera-core/: Cargo.toml
crates/vera-core/src/: chunk_text.rs  config.rs  corpus.rs  git_scope.rs  lib.rs  local_models.rs  stats.rs  types.rs
crates/vera-core/src/discovery/: mod.rs
crates/vera-core/src/embedding/: dynamic.rs  local_provider.rs  mod.rs  model2vec_provider.rs  provider.rs
crates/vera-core/src/indexing/: freshness.rs  mod.rs  pipeline.rs  pipeline_tests.rs  update.rs  update_tests.rs
crates/vera-core/src/parsing/: chunker.rs  extractor.rs  languages.rs  metadata_tests.rs  mod.rs  references.rs  type_relations.rs
crates/vera-core/src/retrieval/: ast_query.rs  bm25.rs  completion_client.rs  dynamic_reranker.rs  file_scan.rs  hybrid.rs  iterative_search.rs  local_reranker.rs  mod.rs  query_classifier.rs  rag_fusion.rs  ranking.rs  references.rs  regex_search.rs  reranker.rs  search_quality_tests.rs  search_service.rs  structural.rs  type_relations.rs  vector.rs
crates/vera-core/src/storage/: bm25.rs  metadata.rs
crates/vera-mcp/: Cargo.toml
crates/vera-mcp/src/: lib.rs  protocol.rs  saved_config.rs  server.rs  tools.rs  watcher.rs
docker/: Dockerfile.cpu  Dockerfile.cuda  Dockerfile.rocm
docs/: accuracy-improvements-v0.4-to-v0.6.md  architecture.md  benchmarks.md  cpu-model-research.md  docker.md  features.md  how-it-works.md  installation.md  llama-cpp-setup.md  manual-install.md  models.md  query-guide.md  recommendation-memo.md  troubleshooting.md
docs/adr/: 001-implementation-language.md
eval/: Cargo.toml  semble-corpus.toml  semble-subset-corpus.toml  setup-semble-corpus.sh
eval/scripts/: convert_semble.py  run_semble_benchmark.py  run_semble_on_vera_eval.py  subset_semble.py
eval/src/: main.rs  runner.rs  types.rs  vera_adapter.rs
eval/tasks/: config.json  cross-file.json  disambiguation.json  intent.json  symbol-lookup.json
eval/tasks/semble/: abseil-cpp.json  aeson.json  aiohttp.json  alamofire.json  axum.json  bash-it.json  bats-core.json  cats.json  chi.json  circe.json  click.json  commons-lang.json  dapper.json  ecto.json  exposed.json  flask.json  fmtlib.json  gin.json  gson.json  guzzle.json  http4s.json  httpx.json  jackson-databind.json  kotlinx-coroutines.json  ktor.json  laravel-framework.json  lazy.nvim.json  libuv.json  messagepack-csharp.json  mini.nvim.json  model2vec.json  monolog.json  newtonsoft-json.json  nlohmann-json.json  nvm.json  pandoc.json  phoenix.json  plug.json  pydantic.json  rack.json  (+15 more)
eval/tasks/semble-subset/: axios.json  cobra.json  curl.json  express.json  fastapi.json  requests.json  sinatra.json  zod.json
scripts/: bootstrap-vendored-grammars.sh
skills/vera/: SKILL.md
skills/vera/agents/: openai.yaml
skills/vera/references/: install.md  mcp.md  query-patterns.md  troubleshooting.md
spikes/language/: .gitignore  README.md  run-benchmarks.sh
spikes/language/results/: benchmark-results.json
spikes/language/rust/: Cargo.toml
spikes/language/rust/src/: parse.rs  startup.rs  walk.rs
spikes/language/ts-bun/: package.json
spikes/language/ts-bun/src/: parse.ts  startup.ts  walk.ts
spikes/storage/: Cargo.toml
