[workspace]
members = [
    "crates/vera-core",
    "crates/vera-cli",
    "crates/vera-mcp",
    "eval",
]
resolver = "2"

[workspace.package]
version = "0.1.4"
edition = "2024"
license = "MIT"
rust-version = "1.85"

[workspace.dependencies]
# Shared dependencies across workspace crates
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Tree-sitter parsing
tree-sitter = "0.26"

# Storage
rusqlite = { version = "0.39", features = ["bundled"] }
tantivy = "0.25"

# CLI
clap = { version = "4", features = ["derive"] }

# HTTP client (for embedding/reranker API calls)
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls-no-provider"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }

# Internal crates
vera-core = { path = "crates/vera-core" }
