[package]
name = "vera-cli"
description = "CLI interface for Vera code indexing and retrieval"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "vera"
path = "src/main.rs"

[dependencies]
vera-core = { workspace = true }
vera-mcp = { path = "../vera-mcp" }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tempfile = "3"
