[package]
name = "vera-core"
description = "Core engine for Vera: parsing, indexing, retrieval, storage, and embedding"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# Tree-sitter parsing
tree-sitter = { workspace = true }

# Storage backends
rusqlite = { workspace = true }
tantivy = { workspace = true }

# HTTP client for embedding/reranker APIs
reqwest = { workspace = true, features = ["stream"] }
rustls = { workspace = true }
tree-sitter-rust = "0.24.1"
tree-sitter-python = "0.25.0"
tree-sitter-typescript = "0.23.2"
tree-sitter-go = "0.25.0"
tree-sitter-java = "0.23.5"
tree-sitter-c = "0.24.1"
tree-sitter-cpp = "0.23.4"
tree-sitter-javascript = "0.25.0"
tree-sitter-language = "0.1.7"
sqlite-vec = "0.1.7"
zerocopy = { version = "0.8", features = ["derive"] }
ignore = "0.4"
rayon = "1.11.0"
futures = "0.3.32"
sha2 = "0.11"
tree-sitter-ruby = "0.23.1"
tree-sitter-bash = "0.25.1"
tree-sitter-kotlin-sg = "0.4.0"
tree-sitter-swift = "0.7.1"
tree-sitter-lua = "0.5.0"
tree-sitter-scala = "0.25.0"
tree-sitter-zig = "1.1.2"
tree-sitter-c-sharp = "0.23.1"
tree-sitter-php = "0.24.2"
tree-sitter-haskell = "0.23.1"
tree-sitter-elixir = "0.3.5"
tree-sitter-dart = "0.1.0"
tree-sitter-hcl = { git = "https://github.com/tree-sitter-grammars/tree-sitter-hcl", version = "1.2.0" }
tree-sitter-html = "0.23.2"
tree-sitter-css = "0.25.0"
# SCSS: vendored C source in crates/tree-sitter-scss/ (crates.io 1.0.0 passes GCC flags that break MSVC)
# Vue: vendored C source in crates/tree-sitter-vue/ (crates.io 0.0.3 needs tree-sitter ~0.20, git needs tree-sitter-language)
tree-sitter-graphql = "0.1.0"
tree-sitter-cmake = "0.7.1"
# Dockerfile: vendored C source in crates/tree-sitter-dockerfile/ (crates.io 0.2.0 needs tree-sitter ^0.20)
tree-sitter-xml = "0.7.0"
# Tier 2A code languages
tree-sitter-objc = "3.0.2"
tree-sitter-perl = "1.1.2"
tree-sitter-julia = "0.23.1"
tree-sitter-nix = "0.3.0"
tree-sitter-ocaml = "0.24.2"
tree-sitter-groovy = "0.1.2"
tree-sitter-clojure-orchard = "0.2.5"
tree-sitter-commonlisp = "0.4.1"
tree-sitter-erlang = "0.15.0"
tree-sitter-fsharp = "0.2.2"
tree-sitter-fortran = "0.5.1"
tree-sitter-powershell = "0.26.3"
tree-sitter-r = "1.2.0"
# Tier 2A batch 2 code languages
tree-sitter-matlab = "1.3.0"
tree-sitter-d = "0.8.2"
tree-sitter-fish = "3.6.0"
tree-sitter-zsh = "0.63.1"
tree-sitter-luau = "1.2.0"
tree-sitter-scheme = "0.24.7"
tree-sitter-racket = "0.24.7"
tree-sitter-elm = "5.9.0"
tree-sitter-glsl = "0.2.0"
tree-sitter-hlsl = "0.2.0"
# Tier 2B structural/config/frontend languages
tree-sitter-svelte-next = "0.1.1"
# Astro: vendored C source in crates/tree-sitter-astro/ (no crates.io package with modern tree-sitter)
tree-sitter-make = "1.1.1"
tree-sitter-ini = "1.4.0"
tree-sitter-nginx = "1.0.1"
tree-sitter-prisma-io = "1.6.0"
ort = { version = "=2.0.0-rc.11", default-features = false, features = ["ndarray", "load-dynamic"] }
flate2 = "1"
tar = "0.4"
tokenizers = { version = "0.22.2" }
dirs = "6.0.0"
ndarray = "0.17.2"
async-trait = "0.1.89"

[build-dependencies]
cc = "1.0"

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["test-util", "macros"] }


