[package]
name = "storage-spike"
version = "0.1.0"
edition = "2024"
publish = false

[workspace]

[[bin]]
name = "storage-spike"
path = "src/main.rs"

[dependencies]
# SQLite + sqlite-vec
rusqlite = { version = "0.34", features = ["bundled"] }
sqlite-vec = "0.1"
zerocopy = { version = "0.8", features = ["derive"] }

# LanceDB
lancedb = "0.27"
arrow-array = "57"
arrow-schema = "57"

# Tantivy (BM25 full-text search)
tantivy = "0.22"

# Benchmarking utilities
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
futures = "0.3"

[profile.release]
opt-level = 3
lto = "thin"
