[workspace]

[package]
name = "language-spike-rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "spike-parse"
path = "src/parse.rs"

[[bin]]
name = "spike-walk"
path = "src/walk.rs"

[[bin]]
name = "spike-startup"
path = "src/startup.rs"

[dependencies]
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-python = "0.23"
ignore = "0.4"
